[package]
name = "silent-t-ecdsa"
version = "0.1.0"
authors = [
    "Omer Shlomovits <omer.shlomovits@gmail.com>",
]
edition = "2018"


[dependencies]
chacha20 = {version = "0.7.2", features = ["rng"]}
rand_core = "0.6.3"
curv-kzen = "0.8.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
serde_json = "1.0"