[package]
name = "silent-t-ecdsa"
version = "0.1.0"
authors = [
    "Omer Shlomovits <omer.shlomovits@gmail.com>",
]
edition = "2018"

[profile.release]
debug = true

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[dependencies]
chacha20 = {version = "0.7.2", features = ["rng"]}
rand_core = "0.6.3"
curv-kzen = { git = "https://github.com/ZenGo-X/curv", branch = "ffts", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11.0"
rayon = "1.5"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
criterion = "0.3"

[[bench]]
name = "dpf_bench"
harness = false
